<resources>
    <string name="app_name">Ticket Office</string>
    <string name="session_expired_text">Session expired!</string>
    <string name="unknown_error">Something went wrong.</string>
    <string name="login_activity_name">Login</string>
    <string name="login_tv_username"> Username </string>
    <string name="login_tv_password"> Password </string>
    <string name="login_et_username"> e.g myusername12 </string>
    <string name="login_btn_login"> Login </string>
    <string name="reg_activity_name">Registration</string>
    <string name="reg_tv_username"> Username </string>
    <string name="reg_et_username"> e.g myusername12 </string>
    <string name="reg_tv_password"> Password </string>
    <string name="reg_tv_role"> Role </string>
    <string name="reg_bt_logout"> Logout </string>
    <string name="reg_btn_registration"> CREATE </string>
    <string name="home_btn_logout"> Logout </string>
    <string name="home_btn_profile"> My Profile </string>
    <string name="home_btn_event_list"> Events </string>
    <string name="home_btn_create_event"> Create event </string>
    <string name="home_btn_create_ticket"> Create ticket </string>
    <string name="home_btn_distributor_list"> Distributors </string>
    <string name="home_btn_notification">Notifications: </string>
    <string name="notification_fragment_title">Notifications: </string>
    <string name="notification_fragment_btn_ok">OK</string>
    <string name="create_ticket_tv_title">Create Ticket</string>
    <string name="create_ticket_tv_customer_ucn">Customer ucn</string>
    <string name="create_ticket_tv_customer_name">Customer name</string>
    <string name="create_ticket_tv_tickets_count">Tickets count</string>
    <string name="create_ticket_tv_event">Event</string>
    <string name="create_ticket_btn_create">Create</string>
    <string name="create_ticket_btn_back">Back</string>
    <string name="modify_event_tv_create_title">Create Event</string>
    <string name="modify_event_btn_create">Create</string>
    <string name="modify_event_btn_back">Back</string>
    <string name="modify_event_tv_type">Type</string>
    <string name="modify_event_tv_places_count">Places count</string>
    <string name="modify_event_tv_places_type">Places type</string>
    <string name="modify_event_tv_price">Price</string>
    <string name="modify_event_tv_tickets_per_user">Tickets per user</string>
    <string name="modify_event_tv_start_date">Start date</string>
    <string name="modify_event_tv_location">Location</string>
    <string name="modify_event_start_date_error">Invalid date format.</string>
    <string name="modify_event_start_date_hint">format: dd.MM.yyyy HH:mm</string>
    <string name="modify_event_add_distributors">Add distributors</string>
    <string name="distributors_fragment_title">Distributors: </string>
    <string name="distributors_fragment_btn_ok">OK</string>
    <string name="distributors_fragment_empty_list">Please, select at least one distributor!</string>
    <string name="modify_ticket_btn_edit">Edit</string>
    <string name="modify_event_tv_edit_title">Edit Event</string>
    <string name="user_details_role_text">Role: </string>
    <string name="user_details_events_fee_text">Events fee: </string>
    <string name="user_details_events_count_text">Events count: </string>
    <string name="user_details_active_events_text">Active events: </string>
    <string name="user_details_sold_tickets_text">Sold tickets: </string>
    <string name="user_details_rating_text">User rating: </string>
    <string name="user_details_rate_text">Rate: </string>
    <string name="event_list_btn_back">Back</string>
    <string name="event_list_btn_filters">Filters</string>
    <string name="events_fragment_title">Event filters: </string>
    <string name="events_fragment_btn_search">Search</string>
    <string name="events_fragment_start_date_tv">Start date: </string>
    <string name="events_fragment_location_tv">Location: </string>
    <string name="events_fragment_start_date_et">dd.MM.yyyy HH:mm</string>
    <string name="events_fragment_active_tv">Active: </string>
    <string name="events_fragment_start_date_error">Invalid date format.</string>
    <string name="distributor_list_btn_back">Back</string>
    <string name="distributor_list_btn_filters">Filters</string>
    <string name="distributor_list_rating_tv">Rating:</string>
    <string name="distributor_list_sold_tickets_tv">Sold tickets:</string>
    <string name="distributor_filters_title">Distributor filters: </string>
    <string name="distributor_filters_name_tv">Name: </string>
    <string name="distributor_filters_rating_tv">Rating: </string>
    <string name="distributor_filters_sold_tickets_tv">Sold tickets: </string>
</resources>