<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.DialogNotificationsFragment">

    <CheckBox
        android:id="@+id/dialog_events_active_cb"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/events_fragment_active_tv"
        app:layout_constraintTop_toBottomOf="@+id/events_fragment_location_et" />

    <TextView
        android:id="@+id/events_fragment_active_tv"
        android:layout_width="61dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/events_fragment_active_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/events_fragment_location_tv" />

    <TextView
        android:id="@+id/events_fragment_location_tv"
        android:layout_width="85dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/events_fragment_location_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/events_fragment_start_date_tv" />

    <TextView
        android:id="@+id/events_fragment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/events_fragment_title"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/events_fragment_btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:text="@string/events_fragment_btn_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_events_active_cb"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/events_fragment_start_date_tv"
        android:layout_width="100dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/events_fragment_start_date_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/events_fragment_title" />

    <EditText
        android:id="@+id/events_fragment_start_date_et"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/events_fragment_start_date_et"
        android:inputType="datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/events_fragment_start_date_tv"
        app:layout_constraintTop_toBottomOf="@+id/events_fragment_title" />

    <EditText
        android:id="@+id/events_fragment_location_et"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/events_fragment_location_tv"
        app:layout_constraintTop_toBottomOf="@+id/events_fragment_start_date_et" />

</androidx.constraintlayout.widget.ConstraintLayout>