<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.DialogNotificationsFragment">

    <TextView
        android:id="@+id/distributor_filters_sold_tickets_tv"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/distributor_filters_sold_tickets_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distributor_filters_rating_tv" />

    <TextView
        android:id="@+id/distributor_filters_rating_tv"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/distributor_filters_rating_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distributor_filters_name_tv" />

    <TextView
        android:id="@+id/distributor_filters_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/distributor_filters_title"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/events_fragment_btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="16dp"
        android:text="@string/events_fragment_btn_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distributor_filters_sold_tickets_et" />

    <TextView
        android:id="@+id/distributor_filters_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/distributor_filters_name_tv"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distributor_filters_title" />

    <EditText
        android:id="@+id/distributor_filters_name_et"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distributor_filters_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/distributor_filters_title" />

    <EditText
        android:id="@+id/distributor_filters_rating_et"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distributor_filters_rating_tv"
        app:layout_constraintTop_toBottomOf="@+id/distributor_filters_name_et" />

    <EditText
        android:id="@+id/distributor_filters_sold_tickets_et"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distributor_filters_sold_tickets_tv"
        app:layout_constraintTop_toBottomOf="@+id/distributor_filters_rating_et" />

</androidx.constraintlayout.widget.ConstraintLayout>